# CVE_Security

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README_RPM.md  RELEASE_NOTES_v1.1.1.md  build_rpm.sh  install_repo_scan.sh  prepare_release.sh  pyproject.toml
.github/workflows/: security-scan.yml
docs/: API_REFERENCE.md  CLI_REFERENCE.md  INTEGRATION_GUIDE.md  PLUGIN_DEVELOPMENT.md  README.md
examples/: __init__.py  ci-integration.yml  gui-demo.py  quick-start.py
packaging/: _repo-scan  config.yaml  installer.sh  repo-scan-gui.desktop  repo-scan.1  repo-scan.bash-completion  repo-scan.logrotate  repo-scan.service
release_v1.1.1/: CHANGELOG.md  README.md  RELEASE_INFO.txt  RELEASE_NOTES_v1.1.1.md  checksums.txt  install.sh  repo-scan-1.1.1-1.fc43.noarch.rpm  repo_scan-1.1.1-py3-none-any.whl
release_v1.1.1/docs/: ADVANCED_FEATURES.md  CONFIGURATION.md  README.md  RELEASE.md
src/repo_scan/: __init__.py  __main__.py  cli.py  orchestrator.py  scoring.py  utils.py
src/repo_scan/analysis/: __init__.py  code_behavior_analyzer.py  dependency_analyzer.py  dynamic_scorer.py  threat_correlator.py
src/repo_scan/api/: __init__.py  server.py
src/repo_scan/core/: __init__.py  config.py  exceptions.py  models.py
src/repo_scan/dashboard/: __init__.py  metrics_collector.py  real_time_dashboard.py
src/repo_scan/detectors/: __init__.py  bandit.py  base.py  checkov.py  gitleaks.py  registry.py  semgrep.py  trivy.py
src/repo_scan/gui/: __init__.py  __main__.py  main_window.py  web_interface.py
src/repo_scan/ml/: __init__.py  anomaly_detector.py  behavior_analyzer.py  pattern_detector.py  risk_predictor.py
src/repo_scan/notifications/: __init__.py  base.py  email.py  manager.py  slack.py
src/repo_scan/plugins/: __init__.py  base.py  loader.py
src/repo_scan/plugins/examples/: __init__.py  custom_scanner.py
src/repo_scan/report/: __init__.py  generator.py
